@@ -149,12 +149,12 @@ public class ListenerInvocationListenerInvocationDisabledBehaviorTest extends Si
         IEXECUTIONLISTENER_ON_EXECUTION_START,
         IALTERSUITELISTENER_ALTER,
         IANNOTATIONTRANSFORMER_TRANSFORM_3_ARGS,
+        IANNOTATIONTRANSFORMER_DATAPROVIDER,
         ISUITELISTENER_ON_START,
         ITESTLISTENER_ON_START_TEST_TAG,
         METHODINTERCEPTOR_INTERCEPT,
         METHODINTERCEPTOR_INTERCEPT,
         ICLASSLISTENER_ON_BEFORE_CLASS,
-        IANNOTATIONTRANSFORMER_DATAPROVIDER,
         IDATAPROVIDERLISTENER_BEFORE_DATA_PROVIDER_EXECUTION,
         IDATAPROVIDERLISTENER_AFTER_DATA_PROVIDER_EXECUTION,
         ITESTLISTENER_ON_START_TEST_METHOD,
@@ -185,12 +185,12 @@ public class ListenerInvocationListenerInvocationDisabledBehaviorTest extends Si
         IEXECUTIONLISTENER_ON_EXECUTION_START,
         IALTERSUITELISTENER_ALTER,
         IANNOTATIONTRANSFORMER_TRANSFORM_3_ARGS,
+        IANNOTATIONTRANSFORMER_DATAPROVIDER,
         ISUITELISTENER_ON_START,
         ITESTLISTENER_ON_START_TEST_TAG,
         METHODINTERCEPTOR_INTERCEPT,
         METHODINTERCEPTOR_INTERCEPT,
         ICLASSLISTENER_ON_BEFORE_CLASS,
-        IANNOTATIONTRANSFORMER_DATAPROVIDER,
         IDATAPROVIDERLISTENER_BEFORE_DATA_PROVIDER_EXECUTION,
         IDATAPROVIDERLISTENER_AFTER_DATA_PROVIDER_EXECUTION,
         ITESTLISTENER_ON_START_TEST_METHOD,
