@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-1709: @Ignore doesn't work when used on child class, and parent has multiple @Test methods (Krishnan Mahadevan)
 New:   GITHUB-2118: Default assertion message (Jiong Fu)
 Fixed: GITHUB-2080: Wrong text for assertTrue (Jiong Fu)
 Fixed: GITHUB-2137: Issue with Priority with too low values (Krishnan Mahadevan)
